# LuminaChain

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md
.github/workflows/: ci.yml  fuzz.yml  kani.yml  release.yml
docs/: CHANGELOG.md  COMMUNITY_TESTNET_CHECKLIST.md  DUAL_TRANCHE_MATH_SPEC.md  ROADMAP.md  SECURITY_GUIDE.md
lumina-chain/: Cargo.toml  Dockerfile  README.md  ROADMAP.md  docker-compose.prod.yml
lumina-chain/.github/workflows/: fuzz.yml  kani.yml
lumina-chain/charts/lumina-validator/: Chart.yaml  values.yaml
lumina-chain/charts/lumina-validator/templates/: _helpers.tpl  service.yaml  statefulset.yaml
lumina-chain/fuzz/: Cargo.toml
lumina-chain/fuzz/fuzz_targets/: fuzz_execute_si.rs  fuzz_flashburn.rs  fuzz_flashmint.rs  fuzz_instant_redeem.rs  fuzz_transfer.rs  main.rs
lumina-chain/k8s/: service.yaml  statefulset.yaml
lumina-chain/lumina-api/: Cargo.toml
lumina-chain/lumina-api/src/: lib.rs
lumina-chain/lumina-cli/: Cargo.toml
lumina-chain/lumina-cli/src/: main.rs
lumina-chain/lumina-consensus/: Cargo.toml
lumina-chain/lumina-consensus/src/: app.rs  lib.rs
lumina-chain/lumina-crypto/: Cargo.toml
lumina-chain/lumina-crypto/src/: bls.rs  lib.rs  pq.rs  signatures.rs  threshold.rs  zk.rs
lumina-chain/lumina-crypto/src/signatures/: post_quantum.rs
lumina-chain/lumina-execution/: Cargo.toml
lumina-chain/lumina-execution/src/: lib.rs  tests.rs
lumina-chain/lumina-execution/src/instructions/: passkey.rs
lumina-chain/lumina-genesis/src/: lib.rs
lumina-chain/lumina-network/: Cargo.toml
lumina-chain/lumina-network/src/: lib.rs
lumina-chain/lumina-node/src/: main.rs
lumina-chain/lumina-oracles/: Cargo.toml
lumina-chain/lumina-oracles/src/: lib.rs  price_feed.rs
lumina-chain/lumina-simulation/: Cargo.toml  README.md
lumina-chain/lumina-simulation/src/: main.rs
lumina-chain/lumina-storage/: Cargo.toml
lumina-chain/lumina-storage/src/: db.rs
lumina-chain/lumina-types/src/: block.rs  instruction.rs  lib.rs  state.rs  transaction.rs
lumina-chain/lumina-web/app/: globals.css  page.tsx
lumina-chain/lumina-web/app/auth/login/: page.tsx
lumina-chain/lumina-web/app/auth/signup/: page.tsx
lumina-chain/lumina-web/app/dashboard/: page.tsx
lumina-chain/lumina-web/lib/: auth.ts  luminaApi.ts
lumina-chain/lumina-zk/: Cargo.toml
lumina-chain/lumina-zk/src/circuits/: green_energy.rs  mod.rs
