[workspace]
members = [
    "lumina-types",
    "lumina-crypto",
    "lumina-execution",
    "lumina-storage",
    "lumina-consensus",
    "lumina-network",
    "lumina-node",
    "lumina-api",
    "lumina-cli",
    "lumina-genesis",
    "lumina-oracles",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
blake3 = "1"
ed25519-dalek = "2"
ark-groth16 = "0.4"
ark-bls12-381 = "0.4"
ark-std = "0.4"
ark-ff = "0.4"
rand = "0.8"
libp2p = { version = "0.52", features = ["full"] }
rocksdb = "0.21"
tonic = "0.10"
axum = "0.6"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
prost = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
# malachite = { git = "https://github.com/informalsystems/malachite", branch = "main" }
