[package]
name = "lumina-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { workspace = true, features = ["rand_core"] }
blake3 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
ark-groth16 = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-std = { workspace = true }
ark-ff = { workspace = true }
ark-snark = "0.4"
ark-serialize = "0.4"
ark-relations = "0.4"
anyhow = { workspace = true }
thiserror = { workspace = true }
bulletproofs = { workspace = true }
curve25519-dalek = { workspace = true }
merlin = { workspace = true }
