[package]
name = "lumina-crypto"
version = "0.1.0"
edition = "2021"

[features]
default = []
pq-crypto = ["dep:pqcrypto-dilithium", "dep:pqcrypto-kyber", "dep:pqcrypto-traits"]
post-quantum-signatures = ["pq-crypto"]
dilithium = ["pq-crypto"]

[dependencies]
ed25519-dalek = { workspace = true, features = ["rand_core"] }
blake3 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
ark-groth16 = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-std = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-snark = "0.4"
ark-serialize = "0.4"
ark-relations = "0.4"
anyhow = { workspace = true }
thiserror = { workspace = true }
bulletproofs = { workspace = true }
curve25519-dalek-ng = { workspace = true }
merlin = { workspace = true }
threshold_crypto = { workspace = true }
lumina-zk = { path = "../lumina-zk" }
rand_core = "0.5"
pqcrypto-dilithium = { workspace = true, optional = true }
pqcrypto-kyber = { workspace = true, optional = true }
pqcrypto-traits = { workspace = true, optional = true }
