[package]
name = "lumina-oracles"
version = "0.1.0"
edition = "2021"

[dependencies]
lumina-types = { path = "../lumina-types" }
lumina-crypto = { path = "../lumina-crypto" }
serde = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
serde_json = { workspace = true }
blake3 = { workspace = true }
