[package]
name = "lumina-storage"
version = "0.1.0"
edition = "2021"

[features]
default = []
rocksdb = ["dep:rocksdb"]

[dependencies]
lumina-types = { path = "../lumina-types" }
serde = { workspace = true }
rocksdb = { workspace = true, optional = true }
anyhow = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
hex = "0.4"
